# gnome_47_test

./: README.md  meson.build  org.bswa.Gnome47Test.json
data/: meson.build  org.bswa.Gnome47Test.appdata.xml.in  org.bswa.Gnome47Test.desktop.in  org.bswa.Gnome47Test.gschema.xml
data/icons/: meson.build
po/: POTFILES  meson.build
src/: gnome_47_test.gresource.xml  gnome_47_test.in  main.py  meson.build  window.py  window.ui
